--- a/Hotel_Allocation_Environment/pyvenv.cfg
+++ b/Hotel_Allocation_Environment/pyvenv.cfg
@@ -2,4 +2,4 @@ home = C:\Users\Leila\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.0
 executable = C:\Users\Leila\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\Leila\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\Leila\OneDrive\Desktop\Progetti\Python_Project_CL\Hotel_Allocation_Environment
+command = C:\Users\Leila\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\Leila\OneDrive\Allegati\Documenti\Magistrale\Python\Progetti\Python_Project_CL\Hotel_Allocation_Environment
