ignore share, etc folders

--- a/Hotel_Allocation_Environment/.gitignore
+++ b/Hotel_Allocation_Environment/.gitignore
@@ -3,8 +3,9 @@ Hotel_Allocation_Environment/
 __pycache__/
 Scripts/
 Lib/
-Data_storing/
-share/man/man1/
+Include/
+etc/jupyter/nbconfig/notebook.dData_storing/
+share/jupyter/nbextensions/pydeck/
 *.egg-info/
 *.pyc
 *.pyo
